# backend/storage/api-docs/api-docs.json
@@ -293,6 +293,53 @@
                 }
             }
         },
+        "/api/forget_password": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "operationId": "1ed3ede70bb0d0faded8ca70ebe355fb",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "password": {
+                                        "type": "string",
+                                        "example": "123123123"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/verify_email_request": {
             "post": {
                 "tags": [
